--- a/src/main/resources/templates/pages/my/moim/list.html
+++ b/src/main/resources/templates/pages/my/moim/list.html
@@ -31,6 +31,10 @@
                         <div class="my-moim-attendee" th:text="${'모집인원 : ' + m.moimAttendeeCount + '명'}"></div>
                     </div>
                     <div class="my-moim-func">
+                        <button th:if="${type == 'hosted'}" th:onclick="|showAttendeeListModal(${m.moimId})|"
+                                class="view-button">
+                            참가자 확인
+                        </button>
                         <a th:if="${type == 'hosted'}"
                            th:href="@{/moim/modify/{moimId}(moimId=${m.moimId})}">
                             <button class="modify-button"
