--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -493,6 +493,7 @@ footer .footer-container .footer-copyrightText {
     width: 100%;
     max-width: 400px;
     padding: 20px;
+    margin: 20px;
     opacity: 0;
     z-index: 21;
     transform: translateY(50px);
@@ -510,6 +511,28 @@ footer .footer-container .footer-copyrightText {
     font-size: 1.1rem;
     font-weight: bold;
     margin-bottom: 20px;
+}
+
+.modal-wrapper.active .modal-box .modal-body table {
+    width: 100%;
+    margin-bottom: 20px;
+}
+.modal-wrapper.active .modal-box .modal-body table tr {
+    border-bottom: 1px solid #ccc;
+}
+.modal-wrapper.active .modal-box .modal-body table thead {
+    border-top: 1px solid #ccc;
+}
+
+.modal-wrapper.active .modal-box .modal-body table th,
+.modal-wrapper.active .modal-box .modal-body table td {
+    padding: 10px 5px;
+    text-align: center;
+}
+
+.modal-wrapper.active .modal-box .modal-body table th {
+    font-size: 0.8rem;
+    font-weight: bold;
 }
 
 .modal-wrapper.active .modal-box .modal-footer button {
