--- a/src/main/resources/templates/pages/my/moim/list.html
+++ b/src/main/resources/templates/pages/my/moim/list.html
@@ -13,10 +13,10 @@
                 <th:block th:if="${type == 'hosted'}">나의 개설 모임</th:block>
                 <th:block th:if="${type == 'joined'}">나의 참가 모임</th:block>
             </div>
-            
+
             <div th:if="${#lists.isEmpty(moimList)}" class="empty-container">
-                <i class="ti ti-hexagon-minus empty-icon"></i> 아직 연관된 모임이 없어요! 
-                
+                <i class="ti ti-hexagon-minus empty-icon"></i> 아직 연관된 모임이 없어요!
+
             </div>
             <div class="my-moim-list">
                 <div class="my-moim-item" th:each="m : ${moimList}">
@@ -48,8 +48,10 @@
                                 모집중단
                             </button>
                         </a>
-                        <a th:if="${type == 'joined'}" class="cancel-button" href="/moim/">
-                            <button class="cancel-button"
+                        <a class="cancel-button">
+                            <button th:if="${type == 'joined'}" class="cancel-button"
+                                    data-context="mypage" th:data-moim-id="${m.moimId}"
+                                    th:onclick="@{|cancelMoimAttendee(${m.moimId})|}"
                                     th:attr="disabled=${m.moimDate.before(now)}">
                                 참가취소
                             </button>
