HTML : 모임 상세 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/sign.css"/>
     <link rel="stylesheet" href="/css/my.css"/>
+    <link rel="stylesheet" href="/css/moim.css"/>
     <link rel="stylesheet" href="/css/moim_create.css"/>
     <link rel="stylesheet" href="/css/moim_detail.css"/>
     <link rel="stylesheet" href="/css/category.css"/>
