--- a/src/main/resources/static/css/category.css
+++ b/src/main/resources/static/css/category.css
@@ -2,6 +2,8 @@
     display: flex;
     gap: 20px;
     justify-content: space-between;
+    padding: 30px 20px;
+    box-sizing: border-box;
 }
 
 .category-left {
