--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -12,7 +12,7 @@
             <div class="moim-detail-sectionBox">
                 <div class="subTitle" style="display: flex; justify-content: space-between; align-items: center;">
                     참여자 후기
-                    <a th:href="@{|/my/review/${moim.moimId}|}" class="moim-detail-sectionTitleSub">
+                    <a th:href="@{|/review/detail/${moim.moimId}|}" class="moim-detail-sectionTitleSub">
                         <i class="ti ti-arrow-big-right-line"></i> 리뷰 상세보기</a>
                 </div>
                 <div class="review-container">
