--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -38,7 +38,7 @@
             <div class="review-form"> 
             	<div class="review-rate-box"> <!--별 박스-->
                 	<div class="review-star">
-                    	<span th:each = "i : ${#numbers.sequence(1, r.reviewRate)}"class="star" data-value="1">
+                    	<span th:each = "i : ${#numbers.sequence(1, review.reviewRate)}"class="star" data-value="1">
 	                        <i class="ti ti-carambola"></i>
 	                        <i class="ti ti-carambola"></i>
 	                        <i class="ti ti-carambola"></i>
