--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -28,9 +28,9 @@
                 <div class="review-image-delete" id="imageDelete">
                     <div class="review-image-list" id="imageFileList"> <!--이미지-->
                         <span id="imageName"></span>
-                        <span class="image-delete-icon" id="imageDeleteIcon" style="display:none">
-                                <i class="ti ti-trash"></i>
-                            </span>
+                        <span class="image-delete-icon" style="display:none">
+                        	<i class="ti ti-trash" id="imageDeleteIcon"></i>
+                        </span>
                     </div>
                 </div>
 
