BACK : review_write

--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -16,11 +16,12 @@
         <!--리뷰 작성란-->
         <div class="review-content">
             <form id="reviewForm" method="post" action="/review/enroll" enctype="multipart/form-data">
+                <input type="hidden" name="moimId" th:value="${moimId}"/>
                 <textarea id="reviewText" name="reviewText" rows="25" cols="150" placeholder="즐거웠던 기억을 되살려보세요! (10자 이상)"
                           required maxlength="1000"></textarea>
                 <div class="review-image-upload">
                     <i class="ti ti-library-photo"></i>
-                    <span class="image-text">이미지 업로드</span>
+                    <label class="image-text" for="imageUpload">이미지 업로드</label>
                     <input type="file" id="imageUpload" name="imageUpload" accept="image/*"
                            th:enctype="'multiPart/form-data'"/>
                 </div>
@@ -50,8 +51,16 @@
                     </button>
                     <!-- 사용자가 이전에 방문한 url로 이동 -->
                     <button class="review-enroll-Button" type="button"
-                            onclick="showReviewConfirmModal()">등록하기
+                            onclick="submitReview()">등록하기
                     </button>
+                </div>
+                <div id="confirmModal" class="modal" style="display:none;">
+                    <div class="modal-content">
+                        <p>리뷰를 등록하시겠습니까?</p>
+                    <button onclick="showSuccessModal()">예</button>
+                    <button type="button" onclick="closeModal('confirmModal')">아니오</button>
+
+                    </div>
                 </div>
                 <div id="successModal" class="modal" style="display:none;">
                     <div class="modal-content">
