--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -57,7 +57,7 @@
                 <div id="confirmModal" class="modal" style="display:none;">
                     <div class="modal-content">
                         <p>리뷰를 등록하시겠습니까?</p>
-                    <button onclick="showSuccessModal()">예</button>
+                    <button type="button"onclick="confirmAndSubmit()">예</button>
                     <button type="button" onclick="closeModal('confirmModal')">아니오</button>
 
                     </div>
