--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -12,12 +12,18 @@
         <div class="review-header"> <!--리뷰작성 상단바-->
             <div class="review-title">내 모임 리뷰 : [[${moimTitle}]]</div>
         </div>
+        
 
         <!--리뷰 작성란-->
         <div class="review-content">
             <form id="reviewForm" method="post" action="/review/enroll" enctype="multipart/form-data">
                 <input type="hidden" name="moimId" th:value="${moimId}"/>
-                <textarea id="reviewText" name="reviewText" rows="25" cols="150" placeholder="즐거웠던 기억을 되살려보세요! (10자 이상)"
+                <div class="review-title-box">
+                    <label for="reviewTitle">리뷰 제목</label>
+                    <input type="text" id="reviewTitle" name="reviewTitle" placeholder="제목을 입력해주세요"
+                           required maxlength="20"/>
+                </div>
+                <textarea id="reviewText" name="reviewContent" rows="25" cols="150" placeholder="즐거웠던 기억을 되살려보세요! (10자 이상)"
                           required maxlength="1000"></textarea>
                 <div class="review-image-upload">
                     <i class="ti ti-library-photo"></i>
