--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -51,7 +51,7 @@
                         <span class="star" data-value="5"><i class="ti ti-carambola"></i></span>
                     </div>
                 </div>
-                <input type="hidden" name="rating" id="ratingInput">
+                <input type="hidden" name="reviewRate" id="ratingInput">
                 <div class="review-button-box">
                     <button class="review-cancel-Button" type="button" onclick="location.href=document.referrer">취소하기
                     </button>
