--- a/src/main/resources/static/css/review_read.css
+++ b/src/main/resources/static/css/review_read.css
@@ -1,12 +1,11 @@
 .review-wrapper{ 
     /* 화면 가운데 정렬 */
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
     flex-direction: column;
-    max-width: 1200px;      
+    display: flex;
+    justify-content: flex-start;
+    padding:20px 0;
+    align-items: center;  
     margin: 0 auto; 
     font-family: 'Helvetica Neue', sans-serif;
 }
@@ -14,6 +13,7 @@
 .review-banner{
     display: flex;
     flex-direction: column;
+    align-items: center; 
     font-size: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -24,8 +24,8 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    flex-grow: 1; /* 제목이 남은 공간을 차지하도록 */
     margin-top:20px;
+    margin-bottom: 20px;
     font-size: 30px;
     font-weight: bold;
     color: #f29101;
