--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -17,9 +17,9 @@
    <div class="review-wrapper">
       <div class="review-banner">
             <div class="review-title">나만의 특별한 경험을 공유해요.</div>
-            <div class="moim-title">내가 참여한 모임 : [[${moimTitle}]]</div>
+            <div class="moim-title">내가 참여한 모임 : [[${moim.moimTitle}]]</div>
             <div class="moim-info">
-                  <i class="ti ti-calendar-week"></i>[[${moimAddress1}]]&nbsp;[[${moimDate}]]
+                  <i class="ti ti-calendar-week"></i>[[${moim.moimAddress1}]]&nbsp;[[${moim.moimDate}]]
             </div>
       </div>
       <div class="review-photo-container">
@@ -43,22 +43,22 @@
                         </span>
 
                     </div>
-                    	<div class="rate-date-box">
-	                        <div class="review-rate">([[${r.reviewRate}]])</div>
-	                        <div class="review-date">[[${r.reviewDate}]]</div>
-	                        <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
-                  				<a th:href="@{'/review/edit/' + ${r.reviewId} + '(?moimId=' +${r.moimId}+')'}">
- 	     							<span>
- 	     								<i class="ti ti-pencil"></i>
- 	     							</span>
-								</a>&nbsp;
-				     	 		<a th:href="@{'/review/delete/' + ${r.reviewId}}">
-									<span onclick="deleteReviewModal()">
-										<i class="ti ti-trash"></i>
-									</span>
-								</a>
-                  			</div>
+                  <div class="rate-date-box">
+                        <div class="review-rate">([[${r.reviewRate}]])</div>
+                        <div class="review-date">[[${r.reviewDate}]]</div>
+                        <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
+                              <a th:href="@{'/review/edit/' + ${r.reviewId} + '(?moimId=' +${r.moimId}+')'}">
+                                    <span>
+                                          <i class="ti ti-pencil"></i>
+                                    </span>
+                              </a>&nbsp;
+                              <a th:href="@{'/review/delete/' + ${r.reviewId}}">
+                                    <span onclick="deleteReviewModal()">
+                                          <i class="ti ti-trash"></i>
+                                    </span>
+                              </a>
                         </div>
+                  </div>
                         
 
                   <div class="review-content-title">[[${r.reviewTitle}]]</div>
