BACK : 모임상세 리뷰부분 작업중

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/notice.css"/>
     <link rel="stylesheet" href="/css/review_write.css"/>
     <link rel="stylesheet" href="/css/review_edit.css"/>
+    <link rel="stylesheet" href="/css/review_read.css"/>
     <link rel="stylesheet" href="/css/admin.css"/>
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
     
