--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -18,15 +18,12 @@
                 <div class="review-container">
                     <!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
                     <div class="review-item" th:each="r : ${reviewList}">
-                        <img
-                                src="https://media.bunjang.co.kr/product/283006372_1_1722771500_w360.jpg"
-                                alt="후기1" class="profile-img">
                         <div class="review-text">
                             <div class="review-writer">[[${r.username}]]</div>
                             <div class="user-star">
-                                <i class="ti ti-carambola"></i> <i class="ti ti-carambola"></i> <i
-                                    class="ti ti-carambola"></i> <i class="ti ti-carambola"></i> <i
-                                    class="ti ti-carambola"></i>
+                                <span th:each="i : ${#numbers.sequence(1, r.reviewRate)}" class="star" data-value="${i}">
+                                    <i class="ti ti-carambola-filled"></i>
+                                </span>
                             </div>
                             <div class="review">
                                 <p class="reviewText">
