--- a/src/main/resources/static/css/review_read.css
+++ b/src/main/resources/static/css/review_read.css
@@ -101,11 +101,7 @@
     width: 200px;
 
 }
-.writer-profile img{
-    border-radius: 50%;
-    width:100px; height:100px;
-    
-}
+
 .writer-name{
     margin-top: 8px;
 }
@@ -131,13 +127,14 @@
     display: flex;
     flex-direction: row;
     font-size: 15px;
+    margin-bottom: 10px;
 }
 .rate-date-box{
     display: flex;
     flex-direction: row;
     width: 100%;
     max-width: 1000px;
-    font-size: 18px;
+    font-size: 15px;
     color: rgba(207, 203, 203, 0.947);
 }
 
@@ -153,7 +150,7 @@
  }
 .review-content-title{
     display: flex;
-    font-size: 20px;
+    font-size: 15px;
     color:black;
     margin-top: 25px;
     width: 100%;
