--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -16,7 +16,7 @@
                         <i class="ti ti-arrow-big-right-line"></i> 리뷰 상세보기</a>
                 </div>
                 <div class="review-container">
-                    <!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
+                    <!--후기 클릭 : 모달창 추가하기-->
                     <div class="review-item" th:each="r : ${reviewList}">
                         <div class="review-text">
                             <div class="review-writer">[[${r.username}]]</div>
