--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -107,8 +107,9 @@ button {
     width: 100%;
     max-width: 1200px;
     min-height: calc(100dvh - 355px);
-    padding: 30px 0;
+    padding: 30px 20px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .banner-container {
