--- a/src/main/resources/templates/pages/admin/moim/list.html
+++ b/src/main/resources/templates/pages/admin/moim/list.html
@@ -7,111 +7,47 @@
 <body>
 <div th:replace="~{fragments/header :: navigation}"></div>
 
-<main class="admin-moim-container" layout:fragment="content">
-    <h2 class="moim-title">모임 리스트</h2>
+<main class="detail-container" layout:fragment="content">
+    <div class="subTitle" style="margin-bottom: 30px;">모임 관리</div>
 
-    <div class="bd-example">
-        <table class="moim-table">
-            <thead>
-            <tr>
-                <th width="80px" class="moim-title-cell">모임 번호</th>
-                <th class="moim-title-cell">모임 제목</th>
-                <th width="130px" class="moim-title-cell">호스트</th>
-                <th width="130px" class="moim-title-cell">모임 일자</th>
-                <th width="80px" class="moim-title-cell">참여 인원</th>
-            </tr>
-            </thead>
-            <hr/>
-            <tbody>
-            <tr th:each="moim : ${moimList}">
-                <td th:text="${moim.moimId}"></td>
-                <td th:text="${moim.moimTitle}"></td>
-                <td th:text="${moim.moim}"></td>
-                <td th:text="${#dates.format(moim.moimDate, 'yyyy-MM-dd')}" class="moim-date-cell"></td>
-                <td th:text="${moim.moiomAttendeeCount}"></td>
-            </tr>
-            </tbody>
-        </table>
+    <div th:if="${#lists.isEmpty(moimList)}" class="empty-container">
+        <i class="ti ti-hexagon-minus empty-icon"></i> 아직 연관된 모임이 없어요!
     </div>
 
-
-    <div class="moim-delete-button-wrapper"
-         th:if="${loginUser != null && loginUser.isAdmin == 'Y'}">
-        <button class="moim-delete-button" type="button"
-               onclick="moimDeleteModal()">모임 삭제하기
-        </button>
+    <div class="my-moim-list">
+        <div class="my-moim-item" th:each="m : ${moimList}">
+            <img th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${m.fileConvert})}" alt="모임이미지"/>
+            <div class="my-moim-info">
+                <div class="my-moim-title" th:text="${m.moimTitle}"></div>
+                <div class="my-moim-date">
+                    <i class="ti ti-calendar-week"></i>
+                    <div th:text="${#dates.format(m.moimDate, 'yy.MM.dd(E) a hh:mm')}"></div>
+                </div>
+                <div class="my-moim-location" th:text="${m.moimAddress1}"></div>
+                <div class="my-moim-attendee" th:text="${'모집인원 : ' + m.moimAttendeeCount + '명'}"></div>
+            </div>
+            <div class="my-moim-func">
+                <a th:href="@{/moim/modify/{moimId}(moimId=${m.moimId})}">
+                    <button class="modify-button">
+                        수정
+                    </button>
+                </a>
+                <button class="cancel-button"
+                        th:onclick="|cancelMoim(${m.moimId})|">
+                    모임삭제
+                </button>
+            </div>
+        </div>
     </div>
-    <div id="moimDeleteModal" class="modal" style="display:none;">
-        <div class="modal-content">
-	        <p>삭제되었습니다.</p>
-	        <button id="deleteConfirm">확인</button>
-    	</div>
+
+    <div th:if="${!#lists.isEmpty(moimList)}">
+        <div th:replace="fragments/pagination :: pagination(${page}, ${size}, ${totalCount}, ${baseUrl})"></div>
     </div>
-    <form id="deleteForm" th:action="@{/moimList/delete}" method="post" style="display:none;">
-    	<input type="hidden" name="moimId" th:value="${moimId}" />
-    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-	</form>
-
-    <br>
-
-    <nav aria-label="Standard pagination example" style="float: right;">
-        <ul class="pagination">
-
-            <!-- 이전 버튼 -->
-            <li class="page-item" th:if="${pi.currentPage > 1}">
-                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage - 1})}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item disabled" th:unless="${pi.currentPage > 1}">
-                <a class="page-link" href="javascript:void(0);" tabindex="-1" aria-disabled="true">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-
-            <!-- 페이지 번호 -->
-            <li class="page-item" th:each="p : ${#numbers.sequence(pi.startPage, pi.endPage)}"
-                th:classappend="${p == pi.currentPage} ? 'active'">
-                <a class="page-link" th:href="@{${loc}(page=${p})}">[[${p}]]</a>
-            </li>
-
-            <!-- 다음 버튼 -->
-            <li class="page-item" th:if="${pi.currentPage < pi.maxPage}">
-                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage + 1})}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-            <li class="page-item disabled" th:unless="${pi.currentPage < pi.maxPage}">
-                <a class="page-link" href="javascript:void(0);" tabindex="-1" aria-disabled="true">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-
-        </ul>
-    </nav>
-
 </main>
 
 <div th:replace="~{fragments/footer :: footer}"></div>
 <div th:replace="~{fragments/backdrop :: backdrop}"></div>
 <div th:replace="~{fragments/mobileMenu :: mobileMenu}"></div>
-
-    <script th:inline="javascript">
-        document.addEventListener('DOMContentLoaded', () => {
-            const currentPage = /*[[${pi.currentPage}]]*/ 1;
-            const tbody = document.querySelector('tbody');
-
-            if (!tbody) return; // tbody 없으면 종료
-
-            const trs = tbody.querySelectorAll('tr');
-            trs.forEach(tr => {
-                tr.addEventListener('click', () => {
-                    const noticeId = tr.querySelector('td').innerText.trim();
-                    location.href = '/notice/' + noticeId + '/' + currentPage;
-                });
-            });
-        });
-    </script>
 
 </body>
 </html>
